# car_price_prediction

./: Dockerfile  README.md  car_price_prediction_model.pkl  docker-compose.yml  pyproject.toml  requirements.txt
app/: __main__.py
app/core/: settings.py
app/schemas/: request_schema.py
app/services/: carservice.py
app/web/: application.py
app/web/api/: router.py
