[tool.poetry]
name = "app"
version = "0.1.0"
description = "A FastAPI application"
authors = []
maintainers = []
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.12"  # Cập nhật phiên bản Python
fastapi = "^0.111.0"
uvicorn = { version = "^0.30.1", extras = ["standard"] }
gunicorn = "^22.0.0"
pydantic = "^2.0"
pydantic-settings = "^2.0"
yarl = "^1.8.2"
ujson = "^5.10.0"
SQLAlchemy = { version = "^2.0.31", extras = ["asyncio"] }
asyncpg = { version = "^0.29.0", extras = ["sa"] }
httptools = "^0.6.1"
pymongo = "^4.8.0"
loguru = "^0.7.0"
numpy = "^1.23.0"  # Phiên bản tương thích với Python 3.11
scipy = "^1.10.0"  # Phiên bản mới
statsmodels = "^0.14.0"  # Phiên bản hỗ trợ mới nhất
scikit-learn = "^1.2.2"  # Chỉ định phiên bản
sktime = "^0.17.0"  # Chỉ định phiên bản
pycaret = "^3.0.0"  # Chỉ định phiên bản



[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
ruff = "^0.5.0"
mypy = "^1.10.1"
pre-commit = "^3.7.1"
black = "^24.4.2"
pytest-cov = "^5.0.0"
anyio = "^4.0.0"
pytest-env = "^1.1.3"
httpx = "^0.27.0"

[tool.isort]
profile = "black"
multi_line_output = 3
src_paths = ["app"]

[tool.mypy]
strict = true
ignore_missing_imports = true
allow_subclassing_any = true
allow_untyped_calls = true
pretty = true
show_error_codes = true
implicit_reexport = true
allow_untyped_decorators = true
warn_unused_ignores = false
warn_return_any = false
namespace_packages = true

[tool.pytest.ini_options]
filterwarnings = [
    "error",
    "ignore::DeprecationWarning",
    "ignore:.*unclosed.*:ResourceWarning",
]
env = [
    "APP_ENVIRONMENT=pytest",
    "APP_DB_BASE=app_test",
]

[tool.ruff]
select = ["E", "F", "W", "I", "C90", "ANN", "B", "D"]  # Rút gọn rules
ignore = [
    "D105",  # Missing docstring in magic method
    "D107",  # Missing docstring in __init__
    "B008",  # Do not perform function calls in argument defaults
    "D401",  # First line should be in imperative mood
    "D100",  # Missing docstring in public module
]
exclude = ["app/db/migrations", ".venv/"]
line-length = 88

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"